[package]
name = "yrnu"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["cargo", "string"] }
dirs = "6.0.0"
git2 = "0.20.0"
log = "0.4.27"
mlua = { version = "0.10.1", features = ["luajit52", "macros", "vendored"] }
pnet = "0.35.0"
rpassword = "7.3.1"
rsmanuf = "2024.12.1"
rustyline = { version = "15.0.0", features = ["with-file-history"] }
simple-logging = "2.0.2"
ssh2 = "0.9.4"
tokio = { version = "1.42.0", features = ["macros", "net", "rt-multi-thread"] }
url = "2.5.4"

