[package]
name = "yrnu"
version = "1.0.3"
edition = "2024"

[dependencies]
clap = { version = "4.5.20", features = ["cargo", "string"] }
csv = "1.3.1"
dirs = "6.0.0"
git2 = "0.20.0"
hashlink = "0.10.0"
json = "0.12.4"
log = "0.4.27"
mlua = { version = "0.10.1", features = ["luajit52", "macros", "vendored"] }
pnet = "0.35.0"
quick-xml = "0.37.5"
regex = "1.11.1"
rpassword = "7.3.1"
rsmanuf = "2024.12.1"
rustyline = { version = "15.0.0", features = ["with-file-history"] }
simple-logging = "2.0.2"
ssh2 = "0.9.4"
tokio = { version = "1.42.0", features = ["macros", "net", "rt-multi-thread"] }
toml = { version = "0.8.20", features = ["display"] }
url = "2.5.4"
which = "8.0.0"
yaml-rust2 = "0.10.1"

